--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,47 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+.whitecard {
+  display: inline-block;
+  width: 325px;
+  height: 450px;
+  border-radius: 10px;
+  margin: auto;
+  padding: 20px;
+  margin-top: 25px;
+  position: relative;
+}
+
+.card {
+  position: absolute;
+  border-color: transparent;
+  border-radius: 20px;
+  background-color: transparent;
+}
+
+.top {
+  font-size: 100px;
+  top: 0;
+  left: 0;
+  padding-left: 10px;
+  margin-top: -15px;
+}
+
+.bottom {
+  font-size: 100px;
+  bottom: 0;
+  right: 0;
+  padding-right: 10px;
+  margin-bottom: -15px;
+  transform: rotateX(180deg);
+}
+
+.number {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 10px;
+  font-size: 150px;
+}
+.red {
+  color: red;
+}
